--- a/.gitignore
+++ b/.gitignore
@@ -45,19 +45,16 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
-*.pdf
 BRA0_cookfuel.xlsx
 *Rproj*
 
 
 *.bak
-*.csv
 .RData
 *.Rhistory
-*.xlsx
 Issues.docx
-*.docx
 *.gdx
 .Rproj.user
 *.Rda
 Figures/Regional figures.zip
+*.zip
